# FireWatch-AI

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  generate_map.py  pyproject.toml  requirements-vercel.txt  requirements.txt  vercel.json
api/: index.py  main.py  requirements.txt
data/static/: biomes_brazil.geojson  states_brazil.geojson  vegetation_factors.json
docker/: Dockerfile  docker-compose.yml
src/alerts/: __init__.py  alert_manager.py  email_sender.py  push_notification.py  sms_sender.py
src/analysis/: __init__.py  biome_analysis.py  burned_area.py  carbon_emissions.py  fire_clustering.py  fire_perimeter.py
src/api/: main.py
src/core/: __init__.py  config.py  constants.py  geo_utils.py  logging.py
src/crowdsource/: __init__.py  photo_analyzer.py  report_handler.py  validation.py
src/database/: __init__.py  connection.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: 001_initial.py
src/ingestion/: __init__.py  firms_client.py  mapbiomas_client.py  osm_client.py  sentinel_client.py  terrain_client.py  weather_client.py
src/ml/: __init__.py  ignition_predictor.py  report_validator.py  smoke_detection.py
src/prediction/: __init__.py  evacuation_router.py  propagation_model.py  risk_index.py  spread_calculator.py
src/visualization/: map_generator.py
tests/: conftest.py  test_analysis.py  test_api.py  test_firms_client.py  test_prediction.py
